Update .gitignore to include Python-related files and directories, enhancing project cleanliness by ignoring cache and environment files.

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,18 @@ Cargo.lock
 
 # Cache
 cache/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+.Python
+venv/
+.env/
+.venv/
+env/
+ENV/
+.python-version
+.pytest_cache/
+.coverage
+htmlcov/
