Update .gitignore and enhance HTML template for IP information retrieval
This commit updates the .gitignore file to include npm-related files and directories, improving project cleanliness. Additionally, the HTML template is enhanced with a new results view section, including a loading state and structured display for IP data, improving user experience and functionality. The CSS styles are also refined for better layout and responsiveness.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,12 @@ assets/
 
 # Test
 test*
+
+# npm
+node_modules/
+dist/
+eslint.config.mjs
+.prettierrc
+.prettierignore
+package-lock.json
+package.json
