Refactor project structure by updating .gitignore and .prettierignore for better asset management. Enhance .prettierrc formatting options for consistency. Update app.py to improve logging and streamline IP address information retrieval. Remove unused scripts and modules to clean up the codebase. Update README with clearer usage examples and to-do items for future enhancements.

--- a/.gitignore
+++ b/.gitignore
@@ -14,15 +14,14 @@ ENV/
 htmlcov/
 .mypy_cache/
 
-# Assets
-assets/
-
-# Test
-test*
-
-# npm
+# Node
 node_modules/
 dist/
 
-# Minified Templates
-templates/minified
+# Datasets
+datasets/
+.ipapi_memory_server.lock
+.env
+
+# Experiments
+experiments/
