--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
-fastapi>=0.115.12
-uvicorn>=0.34.2
-maxminddb>=2.7.0
-reverse-geocode>=1.6.5
-pydantic>=2.11.4
-jinja2>=3.1.6
-netaddr>=1.3.0
-dnspython>=2.7.0
+black>=25.1.0
+fastapi>=0.115.13
+uvicorn>=0.34.3
 htmlmin>=0.1.12
-csscompressor>=0.9.5
 jsmin>=3.0.1
-redis>=6.1.0
+csscompressor>=0.9.5
+netaddr>=1.3.0
+pandas>=2.3.0
+pgeocode>=0.5.0
+maxminddb>=2.7.0
+timezonefinder>=6.5.9
+pytz>=2025.2
+dnspython>=2.7.0
+IP2Location>=8.10.5
+IP2Proxy>=3.5.1
