--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
-black>=25.1.0
-fastapi>=0.115.13
-uvicorn>=0.34.3
-htmlmin>=0.1.12
-jsmin>=3.0.1
 csscompressor>=0.9.5
+jsmin>=3.0.1
 netaddr>=1.3.0
-pandas>=2.3.0
+htmlmin2>=0.1.13
+uvicorn>=0.38.0
+fastapi>=0.120.4
+black>=25.9.0
+pandas>=2.3.3
+IP2Location>=8.11.0
 pgeocode>=0.5.0
-maxminddb>=2.7.0
-timezonefinder>=6.5.9
-pytz>=2025.2
-dnspython>=2.7.0
-IP2Location>=8.10.5
-IP2Proxy>=3.5.1
+timezonefinder>=8.1.0
+dnspython>=2.8.0
 python-multipart>=0.0.20
+pytz>=2025.2
+maxminddb>=3.0.0
+IP2Proxy>=3.6.0
+tld>=0.13.1
